--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.1",
     "sort-by": "^1.2.0",
+    "sweetalert": "^2.1.2",
     "swiper": "^9.3.2"
   },
   "devDependencies": {
